# shmup

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeUtils.cmake  README.md  build.cmd  build.sh  generate.cmd  generate.sh  premake5.lua
assets/: beam.psd  beam_btm.psd  beam_top.psd  big_expl.psd  bomb.psd  circle.psd  default_font.psd  fire.psd  fire1.psd  gun.psd  lava.psd  player.psd  rocket.psd  sample_sprite.psd  small_font8x8.psd  title.psd  turret.psd
data/: .editorconfig  game.json  input_actions.json  input_mappings.json
data/anims/: boss_body_idle.json  boss_body_intro.json  boss_body_outro.json  intro_lines_bg.json  intro_story.json  lwing_fold.json  player_intro.json  rwing_fold.json
data/fonts/: credits_title.json  default.json  default_numeric.json  small8x8.json
data/levels/: level0.json  list.json
data/scripts/: boss.lua  boss_projectile.lua  choose_ship_screen.lua  end_map.lua  enemy_wave.lua  fade_screen.lua  fire.lua  ingame_screen.lua  intro_story.lua  item.lua  pickle.lua  player.lua  projectile.lua  projectile1.lua  projectile2.lua  small_spark.lua  title_screen.lua  trigger.lua  turret.lua  turret_expl.lua  util.lua  weapon_primary.lua  weapon_secondary.lua
data/scripts/controllers/: background.lua  edge_bounce_mover.lua  enemy.lua  enemy_wave.lua  enemy_wave_spawner.lua  follow.lua  item.lua  line_mover.lua  player.lua  projectile.lua
data/scripts/screens/: copyright.lua  credits.lua  debug.lua  game_over.lua  ingame.lua  inter_level.lua  play.lua  title.lua
data/sprites/: asteroids.json  beam.json  beam_btm.json  beam_top.json  bg1.json  big_expl.json  black.json  bomb.json  circle.json  clouds.json  clouds2.json  credits_title.json  default_font.json  empty.json  enemy.json  fire.json  fire1.json  fire2.json  gun.json  intro_bg.json  intro_lines_bg.json  lava.json  leg.json  main_font.json  main_font_num.json  out.json  player.json  player0.json  rocket.json  rocks.json  sample_sprite.json  shield_item.json  small_font8x8.json  small_spark.json  title.json  title.tga  turret.json  wing.json
data/tilemaps/: objtpl.json  test.json  test2.json
data/tilesets/: anim.json  city.json  city2.json  test.json  test2.json
data/units/: bg.json  bg2.json  boss.json  end_map.json  enemy.json  fade_screen.json  intro_story.json  player.json  psys.json  sample_unit.json  shield_item.json  small_spark.json  tilemap.json  trigger.json  turret.json  turret_expl.json  wave_drone.json
data/units/projectile/: boss_fire.json  fire.json  fire2.json  secondary.json
data/weapons/: boss.json  boss2.json  default.json  fire.json  player_primary.json  player_secondary.json  turret.json
libs/: CMakeLists.txt  premake5.lua
libs/binpack/: GuillotineBinPack.h  MaxRectsBinPack.h  ShelfBinPack.h  SkylineBinPack.h
libs/lua/: CMakeLists.txt  premake5.lua
libs/lua/src/: ldblib.c  ldebug.c  llex.c  loadlib.c  lobject.h  loslib.c  lua.c  luaconf.h
libsold/lua/: Makefile  premake5.lua
libsold/lua/src/: lgc.c  liolib.c  lopcodes.h  ltablib.c  lua.h
libsold/sdl2/: premake5.lua
libsold/sdl2/include/: SDL_config.h  SDL_revision.h
libsold/sdl2_1/: Makefile  Makefile.rules  config.status  libtool  premake5.lua  sdl2-config  sdl2.pc
libsold/sdl2_1/include/: SDL_config.h
libsold/sdl_mixer/: config.status  libtool
src/: CMakeLists.txt  main.cpp  premake5.lua
src/engine/: animation.cpp  animation.h  animation_instance.cpp  animation_instance.h  color.cpp  color.h  data_loader.cpp  data_loader.h  easing.cpp  easing.h  enemy_wave.h  font.cpp  font.h  font_cache.cpp  font_cache.h  game.cpp  game.h  gpu_program.cpp  gpu_program.h  graphics.cpp  graphics.h  image_atlas.cpp  image_atlas.h  input.cpp  input.h  level.cpp  level.h  lua_scripting.h  music.cpp  music.h  music_instance.cpp  music_instance.h  parameters.cpp  parameters.h  particle_system.cpp  particle_system.h  projectile.cpp  projectile.h  projectile_instance.cpp  projectile_instance.h  (+38 more)
src/engine/resources/: animation_resource.cpp  animation_resource.h  enemy_wave_resource.h  font_resource.cpp  font_resource.h  level_resource.cpp  level_resource.h  music_resource.cpp  music_resource.h  script_resource.cpp  script_resource.h  sound_resource.cpp  sound_resource.h  sprite_resource.cpp  sprite_resource.h  tilemap_resource.cpp  tilemap_resource.h  tileset_resource.cpp  tileset_resource.h  unit_resource.cpp  unit_resource.h  weapon_resource.cpp  weapon_resource.h
tools/: premake5.lua
tools/psd2sheet/: main.cpp  premake5.lua  psdimage.cpp  psdimage.h
tools/psd2sheet/zlib/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzio.c  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
