add_subdirectory(glew/build/cmake)
add_subdirectory(jsoncpp)
set(SDL2_DISABLE_SDL2MAIN OFF)
add_subdirectory(sdl)
set(SDL2MIXER_OPUS OFF)
set(SDL2MIXER_FLAC_LIBFLAC OFF)
set(SDL2MIXER_MOD_MODPLUG OFF)
set(FLUIDSYNTH_LIBS OFF)
set(SDL2MIXER_MIDI_FLUIDSYNTH OFF)
add_subdirectory(sdlmixer)
add_subdirectory(spdlog)
add_subdirectory(utfcpp)
